[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "formix-pubsub"
version = "0.9.1"
description = "A serverless Python publish-subscribe interprocess messaging library"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "formix", email = "formix@users.noreply.github.com"}
]
maintainers = [
    {name = "formix", email = "formix@users.noreply.github.com"}
]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["pubsub", "messaging", "publish", "subscribe", "events"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Communications",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
    "pre-commit",
    "build",
    "twine",
    "setuptools>=61.0",
    "wheel",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]

[project.urls]
"Homepage" = "https://github.com/formix/pubsub"
"Bug Tracker" = "https://github.com/formix/pubsub/issues"
"Documentation" = "https://pubsub.readthedocs.io/"
"Source Code" = "https://github.com/formix/pubsub"

[tool.setuptools.packages.find]
where = ["."]
include = ["pubsub*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = [
    "tests",
]
python_files = ["test_*.py", "*_test.py"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.coverage.run]
source = ["pubsub"]

[tool.coverage.report]
show_missing = true
